# NumericalOptimization

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/mf/: LUResolver.cpp  LUResolver.h  Matrix.cpp  Matrix.h  Resolver.h  Vector.cpp  Vector.h
test/: CMakeLists.txt
test/mf/: CMakeLists.txt  t_LUResolver.cpp
