CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(NO_ROOT "${CMAKE_SOURCE_DIR}")
SET(NO_SRC "${NO_ROOT}/src")

enable_testing()
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${NO_ROOT}/bin")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${NO_ROOT}/lib")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${NO_ROOT}/lib")

LINK_DIRECTORIES (
    "${NO_ROOT}/lib"
)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
